# etemenanki

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benchmarks/: Cargo.toml  README.md  benchmarks.md  testdata
benchmarks/benches/: common.rs  comparison.rs  large.rs  rust.rs
etemenanki/: Cargo.toml
etemenanki/src/: components.rs  container.rs  layers.rs  lib.rs  main.rs  tests.rs  variables.rs
etemenanki/src/components/: index.rs  inverted_index.rs  set.rs  string_vector.rs  vector.rs
etemenanki/testdata/: README  encode.sh
etemenanki/testdata/simpledickens/: primary.zigl
etemenanki/testdata/simpledickens/chapter/: chapter.zigl  num.zigv  title.zigv
etemenanki/testdata/simpledickens/novel/: novel.zigl  title.zigv
etemenanki/testdata/simpledickens/p/: p.zigl
etemenanki/testdata/simpledickens/s/: s.zigl
etemenanki/testdata/simpledickens/text/: id.zigv  text.zigl
etemenanki/testdata/simpledickens/titlepage/: titlepage.zigl
imhex/: ziggurat_container.hexpat
imhex/patterns/: ziggurat_container.hexpat  ziggurat_header.hexpat
libcl-hook/: Cargo.toml
libcl-hook-macros/: Cargo.toml
libcl-hook-macros/src/: lib.rs
libcl-hook/src/: lib.rs
libcl-rs/: Cargo.toml  build.rs  wrapper.h
libcl-rs/cbench/: bench.c
libcl-rs/src/: lib.rs  main.rs
libcl-rs/testdata/: README  simpledickens
libcl-rs/testdata/data/: lemma.hcd
libcl-rs/testdata/registry/: simpledickens
libcl-rs/testdata/simpledickens/: chapter_title.avs  chapter_title.avx  lemma.huf  lemma.huf.syn  lemma.lexicon  text_id.avs  text_id.avx  word.hcd  word.huf  word.huf.syn  word.lexicon  word.lexicon.srt
scripts/: encode.sh  fileiter.ipynb  invidx-cache.ipynb  size_estimate.ipynb  test.vrt  varint.ipynb  vrt_to_zig.py  ziggypy
scripts/encow_sample2/s/: .directory
scripts/recipes4000/: manifest.txt
scripts/ziggypy/: components.py
src/: lib.rs  main.rs  tests.rs
ziggurat-varint/: Cargo.toml  README.md  pyproject.toml
ziggurat-varint/src/: lib.rs
ziggypy/: Cargo.toml  pyproject.toml
ziggypy/src/: lib.rs
ziggypy/src/ziggypy/: components.py  container.py  layers.py  util.py  variables.py
