[package]
name = "etemenanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ziggurat-varint = { path = "../ziggurat-varint" }
memmap2 = "0.5.8"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
