[package]
name = "etemenanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ziggurat-varint = { path = "../ziggurat-varint" }
memmap2 = "0.5.8"
num_enum = "0.6.1"
rand = "0.8.5"
uuid = "1.3.4"
enum-as-inner = "0.6.0"
paste = "1.0"
fnv = "1.0.7"
lru = "0.12.1"
streaming-iterator = "0.1.9"
