[package]
name = "etemenanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ziggurat-varint = { path = "../ziggurat-varint" }
memmap2 = "0.5.8"
num_enum = "0.6.1"
rand = "0.8.5"
enum-as-inner = "0.6.0"
paste = "1.0"
fnv = "1.0.7"
lru = "0.12.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
