[package]
name = "ziggurat-varint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ziggurat_varint"
crate-type = ["lib", "cdylib"]

[dependencies]
pyo3 = "0.18.3"

[env]
PYO3_PYTHON = "/usr/bin/python3"