[package]
name = "ziggypy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ziggypy"
crate-type = ["cdylib"]

[dependencies]
etemenanki = { path = "../etemenanki" }
flate2 = "1.0.28"
pyo3 = "0.20.2"
quick-xml = { version = "0.31.0", default-features = false, features = ["encoding"] }
uuid = "1.7.0"
